--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -25,6 +25,11 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 100px;
+  right: 250px;
+  min-height: 500px;
+  width: 500px;
 }
 
 .controlColumn {
